--- a/ticketing/client/package.json
+++ b/ticketing/client/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "install": "^0.13.0",
     "next": "^10.0.4",
+    "npm": "^7.6.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-stripe-checkout": "^2.6.3"
   }
 }
